Bug 24097: Fix for buttons being cut off

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -4920,6 +4920,38 @@ ul.jqtree_common li.jqtree-folder {
     border-bottom: 1px solid #e9e9e9;
 }
 
+.graph-designer .ep-form-toolbar {
+    display: block;
+}
+
+.ep-form-toolbar .ep-form-toolbar-item {
+    min-height: 55px;
+}
+
+.ep-form-toolbar .ep-form-toolbar-item h2,
+.ep-form-toolbar .ep-form-toolbar-item .btn-group-toggle,
+.ep-form-toolbar .ep-form-toolbar-item .graph-settings-crud {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+
+.ep-form-toolbar .ep-form-toolbar-item h2 {
+    padding: 0 10px;
+    z-index: 20;
+}
+
+.ep-form-toolbar .ep-form-toolbar-item .btn-group-toggle {
+    width: fit-content;
+}
+
+.ep-form-toolbar .ep-form-toolbar-item .graph-settings-crud {
+    padding: 0;
+    margin: 0;
+}
+
 .ep-form-toolbar div:nth-last-child(2) {
     margin-right: auto;
 }
@@ -4929,6 +4961,7 @@ ul.jqtree_common li.jqtree-folder {
     font-weight: 400;
     color: #666;
     padding-left: 0;
+    margin: 0;
 }
 
 .ep-form-toolbar-tools {
@@ -11017,6 +11050,7 @@ a.jstree-anchor.permissions-widget {
 .rdm-maincontent {
     height: calc(100vh - 119px);
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .rdm-maincontent .arches-forms-container {
@@ -11185,6 +11219,15 @@ a.tree-display-tool, a.tree-display-tool:hover {
     margin-top: 10px;
 }
 
+.page-rdm #mainnav .list-header,
+.page-rdm nav ul li a {
+    font-size: 11px;
+}
+
+.page-rdm .btn-group.pull-right.hidden-xs {
+    top: 5px !important;
+}
+
 @keyframes loader {
     0% {
         background: #ddd;
@@ -11311,6 +11354,9 @@ a.tree-display-tool, a.tree-display-tool:hover {
     .manage-dropdown {
         padding-left: 50px;
     }
+    .page-rdm #aside-container {
+        position: relative !important;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -11360,9 +11406,10 @@ a.tree-display-tool, a.tree-display-tool:hover {
     .rp-report-container-preview {
         padding: 0 50px 35px 50px;
     }
-    .ep-tools-title h1 {
+    .ep-tools-title h1,
+    h1.page-header.text-overflow.ep-graph-title {
         font-size: 1.1em;
-        padding-left: 51px;
+        padding-left: 51px !important;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -11472,7 +11519,7 @@ a.tree-display-tool, a.tree-display-tool:hover {
         height: auto;
     }
     .node-configuration {
-        height: calc(43vh - 4px);
+        height: 36vh;
     }
     .report-image-grid {
         margin-bottom: 0;
@@ -11590,6 +11637,9 @@ a.tree-display-tool, a.tree-display-tool:hover {
     }
     .find-widget {
         width: 68vw;
+    }
+    .graph-designer .ep-form-toolbar .ep-form-toolbar-item {
+        min-height: 41px;
     }
 }
 
